--- a/packages/fluent/scss/treelist/_layout.scss
+++ b/packages/fluent/scss/treelist/_layout.scss
@@ -92,7 +92,8 @@
         border-right: 1px solid;
         height: 1em;
         vertical-align: top;
-        margin: 0 .5em;
+        margin-block: 0;
+        margin-inline: .5em;
     }
 
 }
