fix: remove duplicate selector for disabled

--- a/packages/default/scss/common/_base.scss
+++ b/packages/default/scss/common/_base.scss
@@ -118,8 +118,7 @@
 
     // Disabled state
     .k-disabled,
-    .k-widget[disabled],
-    .k-disabled {
+    .k-widget[disabled] {
         @include disabled( $kendo-disabled-styling );
 
 
