feat(tabstrip): add variables for styling disabled tabstrip items for all themes

--- a/packages/bootstrap/scss/tabstrip/_variables.scss
+++ b/packages/bootstrap/scss/tabstrip/_variables.scss
@@ -82,6 +82,13 @@ $kendo-tabstrip-item-focus-shadow: $kendo-list-item-focus-shadow !default;
 
 $kendo-tabstrip-item-dragging-shadow: 0px 3px 4px rgba( black, .15 ) !default;
 
+$kendo-tabstrip-item-disabled-bg: null !default;
+$kendo-tabstrip-item-disabled-text: null !default;
+$kendo-tabstrip-item-disabled-border: null !default;
+$kendo-tabstrip-item-disabled-gradient: null !default;
+$kendo-tabstrip-item-disabled-opacity: null !default;
+$kendo-tabstrip-item-disabled-filter: null !default;
+
 $kendo-tabstrip-indicator-size: null !default;
 $kendo-tabstrip-indicator-color: null !default;
 
