--- a/packages/default/scss/imageeditor/_layout.scss
+++ b/packages/default/scss/imageeditor/_layout.scss
@@ -26,8 +26,8 @@
 
     // Image editor toolbar
     .k-imageeditor-toolbar {
-        border-width: 0;
-        border-bottom-width: $kendo-toolbar-border-width;
+        // TODO: component should render k-toolbar-top class
+        @extend .k-toolbar-top !optional;
     }
 
 
