--- a/packages/fluent/scss/imageeditor/_layout.scss
+++ b/packages/fluent/scss/imageeditor/_layout.scss
@@ -29,7 +29,8 @@
 
     // Image editor toolbar
     .k-imageeditor-toolbar {
-        border-width: 0;
+        // TODO: component should render k-toolbar-top class
+        @extend .k-toolbar-top !optional;
     }
 
 
