--- a/packages/nouvelle/scss/toolbar/_layout.scss
+++ b/packages/nouvelle/scss/toolbar/_layout.scss
@@ -107,6 +107,38 @@
     }
 
 
+    // Toolbar orientation
+    .k-toolbar-horizontal {
+        flex-direction: row;
+    }
+    .k-toolbar-vertical {
+        flex-direction: column;
+    }
+
+
+    // Toolbar position
+    .k-toolbar-top {
+        border-width: 0;
+        border-bottom-width: $kendo-toolbar-border-width;
+        flex-direction: row;
+    }
+    .k-toolbar-bottom {
+        border-width: 0;
+        border-top-width: $kendo-toolbar-border-width;
+        flex-direction: row;
+    }
+    .k-toolbar-left {
+        border-width: 0;
+        border-right-width: $kendo-toolbar-border-width;
+        flex-direction: column;
+    }
+    .k-toolbar-right {
+        border-width: 0;
+        border-left-width: $kendo-toolbar-border-width;
+        flex-flow: column;
+    }
+
+
     // Angular specific
     .k-toolbar-renderer {
         display: contents;
