--- a/packages/default/scss/filemanager/_layout.scss
+++ b/packages/default/scss/filemanager/_layout.scss
@@ -18,8 +18,8 @@
         border-color: inherit;
     }
     .k-filemanager-toolbar {
-        border-width: 0;
-        border-bottom-width: $kendo-file-manager-toolbar-border-width;
+        // TODO: component should render k-toolbar-top class
+        @extend .k-toolbar-top !optional;
         border-color: inherit;
         flex-shrink: 0;
     }
