--- a/packages/default/scss/pdf-viewer/_layout.scss
+++ b/packages/default/scss/pdf-viewer/_layout.scss
@@ -17,11 +17,10 @@
 
         // Toolbar
         .k-toolbar {
-            border-top-width: 0;
-            border-right-width: 0;
-            border-left-width: 0;
+            // TODO: component should render k-toolbar-top class
+            @extend .k-toolbar-top !optional;
             border-color: inherit;
-            flex: 0 0 auto;
+            flex: none;
             z-index: 2;
         }
         .k-toolbar .k-pager-wrap,
