--- a/packages/fluent/scss/grid/_layout.scss
+++ b/packages/fluent/scss/grid/_layout.scss
@@ -254,11 +254,13 @@
 
     // Toolbar
     .k-grid-toolbar {
-        border-width: 0 0 var( --kendo-grid-toolbar-border-width, #{$kendo-grid-toolbar-border-width} );
+        // TODO: component should render k-toolbar-top class
+        @extend .k-toolbar-top !optional;
         flex-shrink: 0;
     }
     .k-grid-toolbar-bottom {
-        border-width: var( --kendo-grid-toolbar-border-width, #{$kendo-grid-toolbar-border-width} ) 0 0;
+        // TODO: component should render k-toolbar-bottom class
+        @extend .k-toolbar-bottom !optional;
     }
 
 
