--- a/packages/fluent/scss/scheduler/_layout.scss
+++ b/packages/fluent/scss/scheduler/_layout.scss
@@ -207,8 +207,8 @@
 
     // Header and footer
     .k-scheduler-toolbar {
-        border-width: 0;
-        border-block-end-width: $kendo-toolbar-border-width;
+        // TODO: component should render k-toolbar-top class
+        @extend .k-toolbar-top !optional;
         white-space: nowrap;
         flex-shrink: 0;
         position: relative;
