fix(spreadsheet): remove bottom border from spreadsheet tabstrip

--- a/packages/material/scss/spreadsheet/_layout.scss
+++ b/packages/material/scss/spreadsheet/_layout.scss
@@ -20,6 +20,10 @@
     // Spreadsheet tabstrip
     .k-spreadsheet-tabstrip {
         padding-top: 0;
+
+        .k-tabstrip-items-wrapper {
+            border-width: 0;
+        }
     }
 
 
