--- a/packages/default/scss/input/_variables.scss
+++ b/packages/default/scss/input/_variables.scss
@@ -98,138 +98,334 @@ $kendo-input-sizes: (
     )
 ) !default;
 
+/// The background color of input components.
+/// @group input
 $kendo-input-bg: $kendo-component-bg !default;
+/// The text color of input components.
+/// @group input
 $kendo-input-text: $kendo-component-text !default;
+/// The border color of input components.
+/// @group input
 $kendo-input-border: $kendo-component-border !default;
+/// The shadow of input components.
+/// @group input
 $kendo-input-shadow: null !default;
 
+/// The background color of hovered input components.
+/// @group input
 $kendo-input-hover-bg: null !default;
+/// The text color of hovered input components.
+/// @group input
 $kendo-input-hover-text: null !default;
+/// The border color of hovered input components.
+/// @group input
 $kendo-input-hover-border: rgba( $kendo-input-border, .16 ) !default;
+/// The shadow of hovered input components.
+/// @group input
 $kendo-input-hover-shadow: null !default;
 
+/// The background color of focused input components.
+/// @group input
 $kendo-input-focus-bg: null !default;
+/// The text color of focused input components.
+/// @group input
 $kendo-input-focus-text: null !default;
+/// The border color of focused input components.
+/// @group input
 $kendo-input-focus-border: $kendo-input-hover-border !default;
+/// The shadow of focused input components.
+/// @group input
 $kendo-input-focus-shadow: 0 0 0 2px rgba( $kendo-input-focus-border, .08 ) !default;
 
-$kendo-input-disabled-bg: null !default;
-$kendo-input-disabled-text: null !default;
-$kendo-input-disabled-border: null !default;
-$kendo-input-disabled-gradient: null !default;
-$kendo-input-disabled-shadow: null !default;
-
-$kendo-input-outline-bg: null !default;
-$kendo-input-outline-text: $kendo-input-text !default;
-$kendo-input-outline-border: rgba( $kendo-button-text, .5) !default;
-
-$kendo-input-outline-hover-bg: null !default;
-$kendo-input-outline-hover-text: null !default;
-$kendo-input-outline-hover-border: rgba( $kendo-button-text, .8) !default;
-
-$kendo-input-outline-focus-bg: null !default;
-$kendo-input-outline-focus-text: null !default;
-$kendo-input-outline-focus-border: null !default;
-$kendo-input-outline-focus-shadow: $kendo-input-focus-shadow !default;
-
-$kendo-input-flat-bg: null !default;
-$kendo-input-flat-text: $kendo-input-text !default;
-$kendo-input-flat-border: $kendo-input-border !default;
-
-$kendo-input-flat-hover-bg: null !default;
-$kendo-input-flat-hover-text: null !default;
-$kendo-input-flat-hover-border: $kendo-input-hover-border !default;
-
-$kendo-input-flat-focus-bg: null !default;
-$kendo-input-flat-focus-text: null !default;
-$kendo-input-flat-focus-border: null !default;
-$kendo-input-flat-focus-shadow: $kendo-input-focus-shadow !default;
-
-$kendo-picker-bg: $kendo-button-bg !default;
-$kendo-picker-text: $kendo-button-text !default;
-$kendo-picker-border: $kendo-button-border !default;
-$kendo-picker-gradient: $kendo-button-gradient !default;
-$kendo-picker-shadow: $kendo-button-shadow !default;
-
-$kendo-picker-hover-bg: $kendo-button-hover-bg !default;
-$kendo-picker-hover-text: $kendo-button-hover-text !default;
-$kendo-picker-hover-border: $kendo-button-hover-border !default;
-$kendo-picker-hover-gradient: $kendo-button-hover-gradient !default;
-$kendo-picker-hover-shadow: $kendo-button-hover-shadow !default;
-
-$kendo-picker-focus-bg: $kendo-button-focus-bg !default;
-$kendo-picker-focus-text: $kendo-button-focus-text !default;
-$kendo-picker-focus-border: $kendo-button-focus-border !default;
-$kendo-picker-focus-gradient: $kendo-button-focus-gradient !default;
-$kendo-picker-focus-shadow: $kendo-button-focus-shadow !default;
-
-$kendo-picker-disabled-bg: null !default;
-$kendo-picker-disabled-text: null !default;
-$kendo-picker-disabled-border: null !default;
-$kendo-picker-disabled-gradient: null !default;
-$kendo-picker-disabled-shadow: null !default;
-
-$kendo-picker-outline-bg: null !default;
-$kendo-picker-outline-text: $kendo-button-text !default;
-$kendo-picker-outline-border: rgba( $kendo-picker-outline-text, .5) !default;
-
-$kendo-picker-outline-hover-bg: $kendo-picker-outline-text !default;
-$kendo-picker-outline-hover-text: k-contrast-legacy( $kendo-picker-outline-hover-bg ) !default;
-$kendo-picker-outline-hover-border: $kendo-picker-outline-hover-bg !default;
-
-$kendo-picker-outline-focus-bg: null !default;
-$kendo-picker-outline-focus-text: null !default;
-$kendo-picker-outline-focus-border: null !default;
-$kendo-picker-outline-focus-shadow: $kendo-picker-focus-shadow !default;
-
-$kendo-picker-outline-hover-focus-bg: null !default;
-$kendo-picker-outline-hover-focus-text: null !default;
-$kendo-picker-outline-hover-focus-border: null !default;
-
-$kendo-picker-flat-bg: null !default;
-$kendo-picker-flat-text: $kendo-button-text !default;
-$kendo-picker-flat-border: $kendo-button-border !default;
-
-$kendo-picker-flat-hover-bg: rgba( $kendo-button-text, .04 ) !default;
-$kendo-picker-flat-hover-text: null !default;
-$kendo-picker-flat-hover-border: rgba( $kendo-button-border, .16 ) !default;
-
-$kendo-picker-flat-focus-bg: null !default;
-$kendo-picker-flat-focus-text: null !default;
-$kendo-picker-flat-focus-border: null !default;
-$kendo-picker-flat-focus-shadow: $kendo-picker-focus-shadow !default;
-
-$kendo-picker-flat-hover-focus-bg: null !default;
-$kendo-picker-flat-hover-focus-text: null !default;
-$kendo-picker-flat-hover-focus-border: null !default;
-
-$kendo-input-placeholder-text: $kendo-subtle-text !default;
-$kendo-input-placeholder-opacity: 1 !default;
-
+/// The background color of selected input components.
+/// @group input
 $kendo-input-selected-bg: null !default;
+/// The text color of selected input components.
+/// @group input
 $kendo-input-selected-text: null !default;
 
+/// The background color of disabled input components.
+/// @group input
+$kendo-input-disabled-bg: null !default;
+/// The text color of disabled input components.
+/// @group input
+$kendo-input-disabled-text: null !default;
+/// The border color of disabled input components.
+/// @group input
+$kendo-input-disabled-border: null !default;
+/// The gradient of disabled input components.
+/// @group input
+$kendo-input-disabled-gradient: null !default;
+/// The shadow of disabled input components.
+/// @group input
+$kendo-input-disabled-shadow: null !default;
+
+/// The background color of outline input components.
+/// @group input
+$kendo-input-outline-bg: null !default;
+/// The text color of outline input components.
+/// @group input
+$kendo-input-outline-text: $kendo-input-text !default;
+/// The border color of outline input components.
+/// @group input
+$kendo-input-outline-border: rgba( $kendo-button-text, .5) !default;
+
+/// The background color of outline hovered input components.
+/// @group input
+$kendo-input-outline-hover-bg: null !default;
+/// The text color of outline hovered input components.
+/// @group input
+$kendo-input-outline-hover-text: null !default;
+/// The border color of outline hovered input components.
+/// @group input
+$kendo-input-outline-hover-border: rgba( $kendo-button-text, .8) !default;
+
+/// The background color of outline focused input components.
+/// @group input
+$kendo-input-outline-focus-bg: null !default;
+/// The text color of outline focused input components.
+/// @group input
+$kendo-input-outline-focus-text: null !default;
+/// The border color of outline focused input components.
+/// @group input
+$kendo-input-outline-focus-border: null !default;
+/// The shadow of outline focused input components.
+/// @group input
+$kendo-input-outline-focus-shadow: $kendo-input-focus-shadow !default;
+
+/// The background color of flat input components.
+/// @group input
+$kendo-input-flat-bg: null !default;
+/// The text color of flat input components.
+/// @group input
+$kendo-input-flat-text: $kendo-input-text !default;
+/// The border color of flat input components.
+/// @group input
+$kendo-input-flat-border: $kendo-input-border !default;
+
+/// The background color of flat hovered input components.
+/// @group input
+$kendo-input-flat-hover-bg: null !default;
+/// The text color of flat hovered input components.
+/// @group input
+$kendo-input-flat-hover-text: null !default;
+/// The border color of flat hovered input components.
+/// @group input
+$kendo-input-flat-hover-border: $kendo-input-hover-border !default;
+
+/// The background color of flat focused input components.
+/// @group input
+$kendo-input-flat-focus-bg: null !default;
+/// The text color of flat focused input components.
+/// @group input
+$kendo-input-flat-focus-text: null !default;
+/// The border color of flat focused input components.
+/// @group input
+$kendo-input-flat-focus-border: null !default;
+/// The shadow of flat focused input components.
+/// @group input
+$kendo-input-flat-focus-shadow: $kendo-input-focus-shadow !default;
+
+/// The text color of the input placeholder.
+/// @group input
+$kendo-input-placeholder-text: $kendo-subtle-text !default;
+/// The opacity of the input placeholder.
+/// @group input
+$kendo-input-placeholder-opacity: 1 !default;
+
+/// The color of the input clear value icon.
+/// @group input
 $kendo-input-clear-value-text: null !default;
+/// The opacity of the input clear value icon.
+/// @group input
 $kendo-input-clear-value-opacity: .5 !default;
+/// The color of the hovered input clear value icon.
+/// @group input
 $kendo-input-clear-value-hover-text: null !default;
+/// The opacity of the hovered input clear value icon.
+/// @group input
 $kendo-input-clear-value-hover-opacity: 1 !default;
 
+/// The vertical margin of the clear value icon.
+/// @group input
 $kendo-input-values-margin-y: k-map-get( $kendo-spacing, 0.5 ) !default; // sass-lint:disable-line leading-zero
+/// The horizontal margin of the clear value icon.
+/// @group input
 $kendo-input-values-margin-x: $kendo-input-values-margin-y !default;
 
-
-// Input actions
+/// Width of the input button.
+/// @group input
 $kendo-input-button-width: $kendo-button-inner-calc-size !default;
+/// Border width of the input button.
+/// @group input
 $kendo-input-button-border-width: 1px !default;
+/// Width of the input spinner button.
+/// @group input
 $kendo-input-spinner-width: $kendo-button-inner-calc-size !default;
+/// Icon offset of the input spinner button.
+/// @group input
 $kendo-input-spinner-icon-offset: null !default;
 
-
-// Input separator
+/// Color of the input separator.
+/// @group input
 $kendo-input-separator-color: $kendo-input-text !default;
+/// Opacity of the input separator.
+/// @group input
 $kendo-input-separator-opacity: .5 !default;
 
-
-// Invalid
+/// Border color of the invalid input components.
+/// @group input
 $kendo-input-invalid-border: $kendo-invalid-border !default;
+/// Shadow of the invalid input components.
+/// @group input
 $kendo-input-invalid-shadow: $kendo-invalid-shadow !default;
+
+/// The background color of picker components.
+/// @group picker
+$kendo-picker-bg: $kendo-button-bg !default;
+/// The text color of picker components.
+/// @group picker
+$kendo-picker-text: $kendo-button-text !default;
+/// The border color of picker components.
+/// @group picker
+$kendo-picker-border: $kendo-button-border !default;
+/// The gradient of picker components.
+/// @group picker
+$kendo-picker-gradient: $kendo-button-gradient !default;
+/// The shadow of picker components.
+/// @group picker
+$kendo-picker-shadow: $kendo-button-shadow !default;
+
+/// The background color of hovered picker components.
+/// @group picker
+$kendo-picker-hover-bg: $kendo-button-hover-bg !default;
+/// The text color of hovered picker components.
+/// @group picker
+$kendo-picker-hover-text: $kendo-button-hover-text !default;
+/// The border color of hovered picker components.
+/// @group picker
+$kendo-picker-hover-border: $kendo-button-hover-border !default;
+/// The gradient of hovered picker components.
+/// @group picker
+$kendo-picker-hover-gradient: $kendo-button-hover-gradient !default;
+/// The shadow of hovered picker components.
+/// @group picker
+$kendo-picker-hover-shadow: $kendo-button-hover-shadow !default;
+
+/// The background color of focused picker components.
+/// @group picker
+$kendo-picker-focus-bg: $kendo-button-focus-bg !default;
+/// The text color of focused picker components.
+/// @group picker
+$kendo-picker-focus-text: $kendo-button-focus-text !default;
+/// The border color of focused picker components.
+/// @group picker
+$kendo-picker-focus-border: $kendo-button-focus-border !default;
+/// The gradient of focused picker components.
+/// @group picker
+$kendo-picker-focus-gradient: $kendo-button-focus-gradient !default;
+/// The shadow of focused picker components.
+/// @group picker
+$kendo-picker-focus-shadow: $kendo-button-focus-shadow !default;
+
+/// The background color of disabled picker components.
+/// @group picker
+$kendo-picker-disabled-bg: null !default;
+/// The text color of disabled picker components.
+/// @group picker
+$kendo-picker-disabled-text: null !default;
+/// The border color of disabled picker components.
+/// @group picker
+$kendo-picker-disabled-border: null !default;
+/// The gradient of disabled picker components.
+/// @group picker
+$kendo-picker-disabled-gradient: null !default;
+/// The shadow of disabled picker components.
+/// @group picker
+$kendo-picker-disabled-shadow: null !default;
+
+/// The background color of outline picker components.
+/// @group picker
+$kendo-picker-outline-bg: null !default;
+/// The text color of outline picker components.
+/// @group picker
+$kendo-picker-outline-text: $kendo-button-text !default;
+/// The border color of outline picker components.
+/// @group picker
+$kendo-picker-outline-border: rgba( $kendo-picker-outline-text, .5) !default;
+
+/// The background color of outline hovered picker components.
+/// @group picker
+$kendo-picker-outline-hover-bg: $kendo-picker-outline-text !default;
+/// The text color of outline hovered picker components.
+/// @group picker
+$kendo-picker-outline-hover-text: k-contrast-legacy( $kendo-picker-outline-hover-bg ) !default;
+/// The border color of outline hovered picker components.
+/// @group picker
+$kendo-picker-outline-hover-border: $kendo-picker-outline-hover-bg !default;
+
+/// The background color of outline focused picker components.
+/// @group picker
+$kendo-picker-outline-focus-bg: null !default;
+/// The text color of outline focused picker components.
+/// @group picker
+$kendo-picker-outline-focus-text: null !default;
+/// The border color of outline focused picker components.
+/// @group picker
+$kendo-picker-outline-focus-border: null !default;
+/// The shadow of outline focused picker components.
+/// @group picker
+$kendo-picker-outline-focus-shadow: $kendo-picker-focus-shadow !default;
+
+/// The background color of outline hovered and focused picker components.
+/// @group picker
+$kendo-picker-outline-hover-focus-bg: null !default;
+/// The text color of outline hovered and focused picker components.
+/// @group picker
+$kendo-picker-outline-hover-focus-text: null !default;
+/// The border color of outline hovered and focused picker components.
+/// @group picker
+$kendo-picker-outline-hover-focus-border: null !default;
+
+/// The background color of flat picker components.
+/// @group picker
+$kendo-picker-flat-bg: null !default;
+/// The text color of flat picker components.
+/// @group picker
+$kendo-picker-flat-text: $kendo-button-text !default;
+/// The border color of flat picker components.
+/// @group picker
+$kendo-picker-flat-border: $kendo-button-border !default;
+
+/// The background color of flat hovered picker components.
+/// @group picker
+$kendo-picker-flat-hover-bg: rgba( $kendo-button-text, .04 ) !default;
+/// The text color of flat hovered picker components.
+/// @group picker
+$kendo-picker-flat-hover-text: null !default;
+/// The border color of flat hovered picker components.
+/// @group picker
+$kendo-picker-flat-hover-border: rgba( $kendo-button-border, .16 ) !default;
+
+/// The background color of flat focused picker components.
+/// @group picker
+$kendo-picker-flat-focus-bg: null !default;
+/// The text color of flat focused picker components.
+/// @group picker
+$kendo-picker-flat-focus-text: null !default;
+/// The border color of flat focused picker components.
+/// @group picker
+$kendo-picker-flat-focus-border: null !default;
+/// The shadow of flat focused picker components.
+/// @group picker
+$kendo-picker-flat-focus-shadow: $kendo-picker-focus-shadow !default;
+
+/// The background color of flat hovered and focused picker components.
+/// @group picker
+$kendo-picker-flat-hover-focus-bg: null !default;
+/// The text color of flat hovered and focused picker components.
+/// @group picker
+$kendo-picker-flat-hover-focus-text: null !default;
+/// The border color of flat hovered and focused picker components.
+/// @group picker
+$kendo-picker-flat-hover-focus-border: null !default;
