chore: update var docs for split-button

--- a/packages/default/scss/split-button/_variables.scss
+++ b/packages/default/scss/split-button/_variables.scss
@@ -7,13 +7,25 @@ $kendo-split-button-focus-shadow: $kendo-button-focus-shadow !default;
 /// Horizontal padding of the arrow button.
 /// @group split-button
 $kendo-split-button-arrow-padding-x: $kendo-button-padding-y !default;
+/// Horizontal padding of the small arrow button.
+/// @group split-button
 $kendo-split-button-sm-arrow-padding-x: $kendo-button-sm-padding-y !default;
+/// Horizontal padding of the medium arrow button.
+/// @group split-button
 $kendo-split-button-md-arrow-padding-x: $kendo-button-md-padding-y !default;
+/// Horizontal padding of the large arrow button.
+/// @group split-button
 $kendo-split-button-lg-arrow-padding-x: $kendo-button-lg-padding-y !default;
 
 /// Vertical padding of the arrow button.
 /// @group split-button
 $kendo-split-button-arrow-padding-y: $kendo-button-padding-y !default;
+/// Vertical padding of the small arrow button.
+/// @group split-button
 $kendo-split-button-sm-arrow-padding-y: $kendo-button-sm-padding-y !default;
+/// Vertical padding of the medium arrow button.
+/// @group split-button
 $kendo-split-button-md-arrow-padding-y: $kendo-button-md-padding-y !default;
+/// Vertical padding of the large arrow button.
+/// @group split-button
 $kendo-split-button-lg-arrow-padding-y: $kendo-button-lg-padding-y !default;
