--- a/packages/default/scss/bottom-navigation/_theme.scss
+++ b/packages/default/scss/bottom-navigation/_theme.scss
@@ -2,7 +2,7 @@
 
     // Solid
     @each $name, $color in $kendo-theme-colors {
-        .k-bottom-nav-solid.k-bottom-nav-#{$name} {
+        .k-bottom-nav-solid-#{$name} {
             @include fill(
                 $color: k-true-mix( $color, k-contrast-legacy( $color ), 35%),
                 $bg: $color
@@ -17,29 +17,36 @@
                 @include fill( $color: k-contrast-legacy( $color ) );
             }
         }
+        // TODO: remove when suites update class names
+        .k-bottom-nav-solid.k-bottom-nav-#{$name} {
+            @extend .k-bottom-nav-solid-#{$name} !optional;
+        }
     }
 
     // Flat
-    .k-bottom-nav-flat {
-        @include fill(
-            $kendo-bottom-nav-flat-text,
-            $kendo-bottom-nav-flat-bg,
-            $kendo-bottom-nav-flat-border
-        );
+    @each $name, $color in $kendo-theme-colors {
+        .k-bottom-nav-flat-#{$name} {
+            @include fill(
+                $kendo-bottom-nav-flat-text,
+                $kendo-bottom-nav-flat-bg,
+                $kendo-bottom-nav-flat-border
+            );
 
-        .k-bottom-nav-item.k-focus,
-        .k-bottom-nav-item:focus {
-            @include fill( $bg: rgba($kendo-bottom-nav-flat-text, .05) );
-        }
+            .k-bottom-nav-item.k-focus,
+            .k-bottom-nav-item:focus {
+                @include fill( $bg: rgba($kendo-bottom-nav-flat-text, .05) );
+            }
 
-        @each $name, $color in $kendo-theme-colors {
-            &.k-bottom-nav-#{$name} .k-bottom-nav-item.k-selected {
+            .k-bottom-nav-item.k-selected {
                 @if $name == "secondary" or $name == "light" {
                     @include fill( $color: k-try-shade($color, 3) );
                 } @else {
                     @include fill( $color: $color );
                 }
             }
+        }
+        .k-bottom-nav-flat.k-bottom-nav-#{$name} {
+            @extend .k-bottom-nav-flat-#{$name} !optional;
         }
     }
 
