--- a/packages/fluent/scss/bottom-navigation/_theme.scss
+++ b/packages/fluent/scss/bottom-navigation/_theme.scss
@@ -69,7 +69,7 @@
             $_disabled-bg: map.get( $color-props, disabled-bg );
             $_disabled-border: map.get( $color-props, disabled-border );
 
-            .k-bottom-nav-#{$fill-mode}.k-bottom-nav-#{$theme-color} {
+            .k-bottom-nav-#{$fill-mode}-#{$theme-color} {
                 --kendo-bottom-nav-text: var( --kendo-bottom-nav-#{$fill-mode}-#{$theme-color}-text, #{$_text-color} );
                 --kendo-bottom-nav-bg: var( --kendo-bottom-nav-#{$fill-mode}-#{$theme-color}-bg, #{$_bg} );
                 --kendo-bottom-nav-border: var( --kendo-bottom-nav-#{$fill-mode}-#{$theme-color}-border, #{$_border-color} );
@@ -86,6 +86,10 @@
                 --kendo-bottom-nav-item-disabled-text: var( --kendo-bottom-nav-#{$fill-mode}-#{$theme-color}-disabled-text, #{$_disabled-text} );
                 --kendo-bottom-nav-item-disabled-bg: var( --kendo-bottom-nav-#{$fill-mode}-#{$theme-color}-disabled-bg, #{$_disabled-bg} );
                 --kendo-bottom-nav-item-disabled-border: var( --kendo-bottom-nav-#{$fill-mode}-#{$theme-color}-disabled-border, #{$_disabled-border} );
+            }
+            // TODO: remove when suites update class names
+            .k-bottom-nav-#{$fill-mode}.k-bottom-nav-#{$theme-color} {
+                @extend .k-bottom-nav-#{$fill-mode}-#{$theme-color} !optional;
             }
         }
     }
